# tailguard

./: .gitignore  LEGACY_ARTIFACT_AUDIT.md  LICENSE  MANIFEST.in  README.md  generate_bom.py  pyproject.toml
.github/workflows/: test.yml
data/bom/: bom_auto.csv  bom_chem.csv  bom_pharma.csv  bom_semi.csv  bom_template.csv
notebooks/: tailguard.ipynb
results/: README.md
scripts/: build_notebook.py  smoke_notebook.py  smoke_runtime.py
tailguard/: __init__.py  bom.py  data.py  optimize.py  risk.py  stochastic.py  validation.py
tests/: test_bom.py  test_generate_bom.py  test_notebook.py  test_optimize.py  test_repository.py  test_risk.py  test_stochastic.py  test_validation.py
