[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "tailguard"
version = "0.1.0"
description = "Validated flat sourcing mean-plus-CVaR research prototype"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "numpy>=1.24,<3",
  "pandas>=2.2.2,<3",
  "PuLP>=2.7,<4",
]

[project.optional-dependencies]
notebook = [
  "ipywidgets>=8,<9",
  "matplotlib>=3.8.4,<4",
  "pyparsing<3.3; python_version < '3.10'",
  "ipykernel>=6,<7",
  "jupyter>=1,<2",
]
dev = [
  "build>=1,<2",
  "pytest>=9.0.3,<10; python_version >= '3.10'",
  "nbformat>=5,<6",
  "ruff>=0.8,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.setuptools.packages.find]
include = ["tailguard*"]
